--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,24 @@ aiosignal==1.3.2
 aiosqlite==0.20.0
 alembic==1.14.0
 anyio==4.8.0
+apache-airflow==2.10.4
+apache-airflow-providers-common-compat==1.3.0
+apache-airflow-providers-common-io==1.5.0
+apache-airflow-providers-common-sql==1.21.0
+apache-airflow-providers-fab==1.5.2
+apache-airflow-providers-ftp==3.12.0
+apache-airflow-providers-http==5.0.0
+apache-airflow-providers-imap==3.8.0
+apache-airflow-providers-smtp==1.9.0
+apache-airflow-providers-sqlite==4.0.0
 apispec==6.8.1
 argcomplete==3.5.3
 asgiref==3.8.1
 attrs==24.3.0
 babel==2.16.0
+beautifulsoup4==4.12.3
 blinker==1.9.0
+bs4==0.0.2
 cachelib==0.9.0
 certifi==2024.12.14
 cffi==1.17.1
@@ -27,6 +39,7 @@ Deprecated==1.2.15
 dill==0.3.9
 dnspython==2.7.0
 email_validator==2.2.0
+emoji==2.14.1
 Flask==2.2.5
 Flask-AppBuilder==4.5.2
 Flask-Babel==2.0.0
@@ -39,11 +52,14 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.2.2
 frozenlist==1.5.0
 fsspec==2024.12.0
+geographiclib==2.0
+geopy==2.4.1
 google-re2==1.1.20240702
 googleapis-common-protos==1.66.0
 grpcio==1.69.0
 gunicorn==23.0.0
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
@@ -59,6 +75,7 @@ lazy-object-proxy==1.10.0
 limits==4.0.0
 linkify-it-py==2.0.3
 lockfile==0.12.2
+lxml==5.3.0
 Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -80,6 +97,7 @@ opentelemetry-proto==1.29.0
 opentelemetry-sdk==1.29.0
 opentelemetry-semantic-conventions==0.50b0
 ordered-set==4.1.0
+outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
 pathspec==0.12.1
@@ -92,8 +110,10 @@ psutil==6.1.1
 pycparser==2.22
 Pygments==2.19.1
 PyJWT==2.10.1
+PySocks==1.7.1
 python-daemon==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-nvd3==0.16.0
 python-slugify==8.0.4
 pytz==2024.2
@@ -107,9 +127,12 @@ rich-argparse==1.6.0
 rpds-py==0.22.3
 scikit-learn==1.6.1
 scipy==1.15.1
+selenium==4.27.1
 setproctitle==1.3.4
 six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
 SQLAlchemy==1.4.54
 SQLAlchemy-JSONField==1.0.2
 SQLAlchemy-Utils==0.41.2
@@ -120,14 +143,20 @@ termcolor==2.5.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
 time-machine==2.16.0
+trio==0.28.0
+trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.2
 uc-micro-py==1.0.3
 universal_pathlib==0.2.6
 urllib3==2.3.0
+webdriver-manager==4.0.2
+webencodings==0.5.1
+websocket-client==1.8.0
 Werkzeug==2.2.3
 wirerope==1.0.0
 wrapt==1.17.2
+wsproto==1.2.0
 WTForms==3.2.1
 yarl==1.18.3
 zipp==3.21.0
