--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ cryptography==44.0.0
 Deprecated==1.2.15
 dill==0.3.9
 dnspython==2.7.0
+duckdb==1.1.3
 email_validator==2.2.0
 emoji==2.14.1
 Flask==2.2.5
