--- a/.github/workflows/dataPipeline.yml
+++ b/.github/workflows/dataPipeline.yml
@@ -28,6 +28,13 @@ jobs:
       
     - name: init Docker containers
       run: docker compose up  airflow-init
+    
+    - name: wait for Airflow to start
+      run:  echo "Waiting for Airflow webserver..."
+            while ! curl -s "http://localhost:8080/health" > /dev/null; do
+              sleep 5
+            done
+            echo "Airflow webserver is ready!"
   
     - name: start Docker containers
       run: docker compose up -d
