--- a/.github/workflows/dataPipeline.yml
+++ b/.github/workflows/dataPipeline.yml
@@ -43,42 +43,7 @@ jobs:
       run: make run_dag_GHActions
 
     - name: Wait for DAG completion
-      run: |
-        MAX_WAIT=180  # 5 minutes timeout
-        INTERVAL=10   # Check every 10 seconds
-        ELAPSED=0
-        
-        while [ $ELAPSED -lt $MAX_WAIT ]; do
-          # Check specifically the last run status
-          STATUS=$(docker exec dataeng_utmb_pipeline-airflow-webserver-1 airflow dags list-runs -d utmb_flow --no-backfill | grep -E "success|failed|running" || echo "pending")
-          echo "{$STATUS}" 
-          if [[ $STATUS == *"success"* ]]; then
-            echo "Last DAG run completed successfully"
-            break
-          elif [[ $STATUS == *"failed"* ]]; then
-            echo "Last DAG run failed. Printing logs..."
-            # Get the latest dag_id
-            DAG_RUN_ID=$(docker exec dataeng_utmb_pipeline-airflow-webserver-1 airflow dags list-runs -d utmb_flow --no-backfill | grep -E "failed" | awk '{print $1}')
-            # Print logs for all tasks in the failed DAG run
-            docker exec dataeng_utmb_pipeline-airflow-webserver-1 airflow dags show-dag utmb_flow --save logs.txt
-            docker exec dataeng_utmb_pipeline-airflow-webserver-1 airflow tasks list utmb_flow | while read -r task; do
-                echo "=== Logs for task: $task ==="
-                docker exec dataeng_utmb_pipeline-airflow-webserver-1 airflow tasks logs utmb_flow $task $DAG_RUN_ID
-            done
-            exit 1
-          elif [[ $STATUS == *"running"* ]]; then
-            echo "DAG is still running... ($ELAPSED seconds elapsed)"
-          else
-            echo "Waiting for DAG to start... ($ELAPSED seconds elapsed)"
-          fi
-          sleep $INTERVAL
-          ELAPSED=$((ELAPSED + INTERVAL))
-        done
-        
-        if [ $ELAPSED -ge $MAX_WAIT ]; then
-          echo "Timeout waiting for DAG completion"
-          exit 1
-        fi
+      run: sleep 120
 
     - uses: stefanzweifel/git-auto-commit-action@v4
       with:
