--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,15 @@ apache-airflow-providers-imap==3.8.0
 apache-airflow-providers-smtp==1.9.0
 apache-airflow-providers-sqlite==4.0.0
 apispec==6.8.1
+appnope==0.1.4
 argcomplete==3.5.3
 asgiref==3.8.1
+asttokens==3.0.0
 attrs==24.3.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
+branca==0.8.1
 bs4==0.0.2
 cachelib==0.9.0
 certifi==2024.12.14
@@ -30,17 +33,23 @@ click==8.1.8
 clickclick==20.10.2
 colorama==0.4.6
 colorlog==6.9.0
+comm==0.2.2
 ConfigUpdater==3.2
 connexion==2.14.2
+contourpy==1.3.1
 cron-descriptor==1.4.5
 croniter==6.0.0
 cryptography==44.0.0
+cycler==0.12.1
+debugpy==1.8.12
+decorator==5.1.1
 Deprecated==1.2.15
 dill==0.3.9
 dnspython==2.7.0
 duckdb==1.1.3
 email_validator==2.2.0
 emoji==2.14.1
+executing==2.2.0
 Flask==2.2.5
 Flask-AppBuilder==4.5.2
 Flask-Babel==2.0.0
@@ -51,6 +60,8 @@ Flask-Login==0.6.3
 Flask-Session==0.5.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.2.2
+folium==0.19.4
+fonttools==4.55.5
 frozenlist==1.5.0
 fsspec==2024.12.0
 geographiclib==2.0
@@ -66,12 +77,18 @@ httpx==0.28.1
 idna==3.10
 importlib_metadata==8.5.0
 inflection==0.5.1
+ipykernel==6.29.5
+ipython==8.31.0
 itsdangerous==2.2.0
+jedi==0.19.2
 Jinja2==3.1.5
 jmespath==1.0.1
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
 lazy-object-proxy==1.10.0
 limits==4.0.0
 linkify-it-py==2.0.3
@@ -83,11 +100,14 @@ MarkupSafe==3.0.2
 marshmallow==3.25.1
 marshmallow-oneofschema==3.1.1
 marshmallow-sqlalchemy==0.28.2
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.2
 mdurl==0.1.2
 methodtools==0.4.7
 more-itertools==10.6.0
 multidict==6.1.0
+nest-asyncio==1.6.0
 numpy==2.2.1
 opentelemetry-api==1.29.0
 opentelemetry-exporter-otlp==1.29.0
@@ -101,16 +121,25 @@ ordered-set==4.1.0
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
+parso==0.8.4
 pathspec==0.12.1
 pendulum==3.0.0
+pexpect==4.9.0
+pillow==11.1.0
+platformdirs==4.3.6
+plotly==5.24.1
 pluggy==1.5.0
 prison==0.2.1
+prompt_toolkit==3.0.50
 propcache==0.2.1
 protobuf==5.29.3
 psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
 PyJWT==2.10.1
+pyparsing==3.2.1
 PySocks==1.7.1
 python-daemon==3.1.2
 python-dateutil==2.9.0.post0
@@ -119,6 +148,7 @@ python-nvd3==0.16.0
 python-slugify==8.0.4
 pytz==2024.2
 PyYAML==6.0.2
+pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
 requests-toolbelt==1.0.0
@@ -130,6 +160,7 @@ scikit-learn==1.6.1
 scipy==1.15.1
 selenium==4.27.1
 setproctitle==1.3.4
+setuptools==75.8.0
 six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -138,12 +169,15 @@ SQLAlchemy==1.4.54
 SQLAlchemy-JSONField==1.0.2
 SQLAlchemy-Utils==0.41.2
 sqlparse==0.5.3
+stack-data==0.6.3
 tabulate==0.9.0
 tenacity==9.0.0
 termcolor==2.5.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
 time-machine==2.16.0
+tornado==6.4.2
+traitlets==5.14.3
 trio==0.28.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
@@ -151,13 +185,17 @@ tzdata==2024.2
 uc-micro-py==1.0.3
 universal_pathlib==0.2.6
 urllib3==2.3.0
+wcwidth==0.2.13
 webdriver-manager==4.0.2
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==2.2.3
 wirerope==1.0.0
+wordninja==2.0.0
 wrapt==1.17.2
 wsproto==1.2.0
 WTForms==3.2.1
+xyzservices==2025.1.0
 yarl==1.18.3
+yellowbrick==1.5
 zipp==3.21.0
