--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ duckdb==1.1.3
 email_validator==2.2.0
 emoji==2.14.1
 executing==2.2.0
+fastjsonschema==2.21.1
 Flask==2.2.5
 Flask-AppBuilder==4.5.2
 Flask-Babel==2.0.0
@@ -107,6 +108,7 @@ mdurl==0.1.2
 methodtools==0.4.7
 more-itertools==10.6.0
 multidict==6.1.0
+nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==2.2.1
 opentelemetry-api==1.29.0
@@ -158,6 +160,7 @@ rich-argparse==1.6.0
 rpds-py==0.22.3
 scikit-learn==1.6.1
 scipy==1.15.1
+seaborn==0.13.2
 selenium==4.27.1
 setproctitle==1.3.4
 setuptools==75.8.0
@@ -185,6 +188,7 @@ tzdata==2024.2
 uc-micro-py==1.0.3
 universal_pathlib==0.2.6
 urllib3==2.3.0
+utm==0.8.0
 wcwidth==0.2.13
 webdriver-manager==4.0.2
 webencodings==0.5.1
