--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.11.11
 aiosignal==1.3.2
 aiosqlite==0.20.0
 alembic==1.14.0
+altair==5.5.0
 anyio==4.8.0
 apache-airflow==2.10.4
 apache-airflow-providers-common-compat==1.3.0
@@ -22,10 +23,12 @@ asttokens==3.0.0
 attrs==24.3.0
 babel==2.16.0
 beautifulsoup4==4.12.3
+black==25.1.0
 blinker==1.9.0
 branca==0.8.1
 bs4==0.0.2
 cachelib==0.9.0
+cachetools==5.5.1
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -37,6 +40,7 @@ comm==0.2.2
 ConfigUpdater==3.2
 connexion==2.14.2
 contourpy==1.3.1
+coverage==7.6.12
 cron-descriptor==1.4.5
 croniter==6.0.0
 cryptography==44.0.0
@@ -67,6 +71,8 @@ frozenlist==1.5.0
 fsspec==2024.12.0
 geographiclib==2.0
 geopy==2.4.1
+gitdb==4.0.12
+GitPython==3.1.44
 google-re2==1.1.20240702
 googleapis-common-protos==1.66.0
 grpcio==1.69.0
@@ -76,8 +82,10 @@ html5lib==1.1
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+imageio==2.37.0
 importlib_metadata==8.5.0
 inflection==0.5.1
+iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.31.0
 itsdangerous==2.2.0
@@ -91,6 +99,8 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
 lazy-object-proxy==1.10.0
+lazy_loader==0.4
+lime==0.2.0.1
 limits==4.0.0
 linkify-it-py==2.0.3
 lockfile==0.12.2
@@ -108,8 +118,11 @@ mdurl==0.1.2
 methodtools==0.4.7
 more-itertools==10.6.0
 multidict==6.1.0
+mypy-extensions==1.0.0
+narwhals==1.24.1
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.4.2
 numpy==2.2.1
 opentelemetry-api==1.29.0
 opentelemetry-exporter-otlp==1.29.0
@@ -138,11 +151,15 @@ protobuf==5.29.3
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.0
 pycparser==2.22
+pydeck==0.9.1
 Pygments==2.19.1
 PyJWT==2.10.1
 pyparsing==3.2.1
 PySocks==1.7.1
+pytest==8.3.4
+pytest-cov==6.0.0
 python-daemon==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -158,6 +175,7 @@ rfc3339-validator==0.1.4
 rich==13.9.4
 rich-argparse==1.6.0
 rpds-py==0.22.3
+scikit-image==0.25.1
 scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
@@ -165,6 +183,7 @@ selenium==4.27.1
 setproctitle==1.3.4
 setuptools==75.8.0
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
@@ -173,13 +192,18 @@ SQLAlchemy-JSONField==1.0.2
 SQLAlchemy-Utils==0.41.2
 sqlparse==0.5.3
 stack-data==0.6.3
+streamlit==1.41.1
+streamlit_folium==0.24.0
 tabulate==0.9.0
 tenacity==9.0.0
 termcolor==2.5.0
 text-unidecode==1.3
 threadpoolctl==3.5.0
+tifffile==2025.1.10
 time-machine==2.16.0
+toml==0.10.2
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 trio==0.28.0
 trio-websocket==0.11.1
