--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.2
 aiosqlite==0.20.0
 alembic==1.14.0
 altair==5.5.0
+annotated-types==0.7.0
 anyio==4.8.0
 apache-airflow==2.10.4
 apache-airflow-providers-common-compat==1.3.0
@@ -55,6 +56,7 @@ email_validator==2.2.0
 emoji==2.14.1
 executing==2.2.0
 fastjsonschema==2.21.1
+filelock==3.18.0
 Flask==2.2.5
 Flask-AppBuilder==4.5.2
 Flask-Babel==2.0.0
@@ -78,9 +80,12 @@ googleapis-common-protos==1.66.0
 grpcio==1.69.0
 gunicorn==23.0.0
 h11==0.14.0
+hf-xet==1.1.5
 html5lib==1.1
 httpcore==1.0.7
 httpx==0.28.1
+huggingface==0.0.1
+huggingface-hub==0.34.3
 idna==3.10
 imageio==2.37.0
 importlib_metadata==8.5.0
@@ -93,11 +98,18 @@ jedi==0.19.2
 Jinja2==3.1.5
 jmespath==1.0.1
 joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+langchain==0.3.27
+langchain-core==0.3.72
+langchain-huggingface==0.3.1
+langchain-text-splitters==0.3.9
+langsmith==0.4.11
 lazy-object-proxy==1.10.0
 lazy_loader==0.4
 lime==0.2.0.1
@@ -117,6 +129,7 @@ mdit-py-plugins==0.4.2
 mdurl==0.1.2
 methodtools==0.4.7
 more-itertools==10.6.0
+mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
 narwhals==1.24.1
@@ -133,6 +146,7 @@ opentelemetry-proto==1.29.0
 opentelemetry-sdk==1.29.0
 opentelemetry-semantic-conventions==0.50b0
 ordered-set==4.1.0
+orjson==3.11.1
 outcome==1.3.0.post0
 packaging==24.2
 pandas==2.2.3
@@ -153,6 +167,8 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==19.0.0
 pycparser==2.22
+pydantic==2.11.7
+pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.1
 PyJWT==2.10.1
@@ -169,17 +185,20 @@ pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
+regex==2025.7.34
 requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rich==13.9.4
 rich-argparse==1.6.0
 rpds-py==0.22.3
+safetensors==0.5.3
 scikit-image==0.25.1
 scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
 selenium==4.27.1
+sentence-transformers==5.0.0
 setproctitle==1.3.4
 setuptools==75.8.0
 six==1.17.0
@@ -194,6 +213,7 @@ sqlparse==0.5.3
 stack-data==0.6.3
 streamlit==1.41.1
 streamlit_folium==0.24.0
+sympy==1.14.0
 tabulate==0.9.0
 tenacity==9.0.0
 termcolor==2.5.0
@@ -201,12 +221,16 @@ text-unidecode==1.3
 threadpoolctl==3.5.0
 tifffile==2025.1.10
 time-machine==2.16.0
+tokenizers==0.21.4
 toml==0.10.2
+torch==2.7.1
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.54.1
 trio==0.28.0
 trio-websocket==0.11.1
+typing-inspection==0.4.1
 typing_extensions==4.12.2
 tzdata==2024.2
 uc-micro-py==1.0.3
@@ -227,3 +251,4 @@ xyzservices==2025.1.0
 yarl==1.18.3
 yellowbrick==1.5
 zipp==3.21.0
+zstandard==0.23.0
